--- a/src/main/resources/test_framework.properties
+++ b/src/main/resources/test_framework.properties
@@ -1,2 +1,1 @@
-path_to_pizza = https://www.pizzatempo.by/registration/
-path_to_shoppingPizza = https://www.pizzatempo.by/menu/pizza.html
+path_to_url=https://www.pizzatempo.by/
